--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -28,12 +28,13 @@
   </div> -->
 
 
-  <header class="bgimg w3-display-container w3-grayscale-min" id="home">
+  <!-- <header class="bgimg w3-display-container w3-grayscale-min" id="home">
     <div class="w3-display-top w3-center cookware">
       <span class="w3-text-black ">Your Checklist</span>
     </div>
 
-  </header>
+  
+  </header> -->
   <form action="/action_page.php" style="border:1px solid #ccc">
     <div class="container">
       <div class="center">
