--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,26 +2,31 @@
   <h2>Login Form</h2>
 </div>
 
-<form action="loginsuccessful.html" method="post">
+<form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)" style="border:1px solid #ccc">
 
-  <div class="center">
 
-    <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+    <div class="center w3-padding w3-center">
+      <label> <b>Email</b></label>
+      <input formControlName="email" type="text" placeholder="Enter your email address" required>
 
-      <button type="submit">Login </button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-      </label>
+      <label><b>Password</b></label>
+      <input formControlName="password" type="password" placeholder="Password" required>
+      <button type="button" class="w3-button w3-red"><a [routerLink]=''> Cancel </a></button>
+      <button type="submit" class="w3-button w3-green" [disabled]="!formdata.valid"> LogIn</button>
+      
+             
+      <!-- <div class="container" style="background-color:#f1f1f1"> -->
+        
+        <span class="psw">Forgot <a href="passwordreset.html">Username/password?</a></span>
+      <!-- </div> -->
+    </div>
+    <div *ngIf='loginState' class="w3-container">
+      <div class="w3-center">
+        <h1 class="w3-red"> Email id or password is incorrect!</h1>
+      </div>
+    
     </div>
 
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" class="cancelbtn"><a [routerLink] = ''> Cancel </a></button>
-      <span class="psw">Forgot <a href="passwordreset.html">Username/password?</a></span>
-    </div>
-  </div>
+    
 </form>
