--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,193 @@
+<div class="bgimg w3-display-container w3-grayscale-min" id="home">
+    <div class="w3-display-top w3-center cookware">
+        <span class="w3-text-black ">Your Checklist</span>
+    </div>
+    <hr class="cookware-header-line">
+    <div class="w3-center w3-text-balck">
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+    </div>
+</div>
+<div id="products" class="content w3-padding-large">
+    <div class="w3-col l2">
+        <!-- About Card -->
+        <div class="w3-card w3-margin w3-margin-top">
+            <a>
+                <img src='../images/Trolleys_Link.jpg' alt="Trolleya"></a>
+            <div class="w3-container w3-white">
+                <h4><b>Travel Trolleys</b></h4>
 
+            </div>
+        </div>
+    </div>
+    <div class="w3-col l2">
+        <!-- About Card -->
+        <div class="w3-card w3-margin w3-margin-top">
+            <a href="travel bag.html">
+
+                <img src="../images/Bags_Link.jpg" width="190" height="185" alt="bags"></a>
+            <div class="w3-container w3-white">
+                <h4><b>Travel bags</b></h4>
+
+            </div>
+        </div>
+    </div>
+    <div class="w3-col l2">
+        <!-- About Card -->
+        <div class="w3-card w3-margin w3-margin-top">
+            <a href="travel accessories.html">
+                <img src="../images/Accessories_Link.jpg" style="width: 180" height="155" alt="accessories"></a>
+            <div class="w3-container w3-white">
+                <h4><b>Travel Accessories</b></h4>
+
+            </div>
+        </div>
+    </div>
+    <div class="w3-col l2">
+        <!-- About Card -->
+        <div class="w3-card w3-margin w3-margin-top">
+            <a href="cosmetics.html">
+                <img src="../images/Cosmetics_Link.jpg" style="width: 100%" height="155" alt="cosmetics"></a>
+            <div class="w3-container w3-white">
+                <h4><b>Travel Cosmetics</b></h4>
+
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Adding popup -->
+        <h2>Cash On Delivery!!!</h2>
+        <p>Wanna pay only after seeing the product? Check out our exclusive payment option</p>
+
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal1">
+            What is COD??
+        </button>
+        <br />
+        <br />
+
+        <h2>Easy Refunds!!!</h2>
+
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+            Wanna get money back???
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Cash on Delivery </h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        Cash on Delivery is a payment method where you dont need to pay anything before you actually see
+                        the products!!!
+                        You can pay the amount after wee deliver the product to you!!!
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- The Modal -->
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Easy Refunds</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        You dont have to worry about returning at all!!
+                        you can have your money back rather than getting points for each retrun you make!!!
+
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w3-container">
+        <div class="w3-half w3-black w3-text-white">
+            <!-- Contact -->
+            <div class="w3-container" id="contact">
+                <h2>Your Feedback is important to us</h2>
+                <p>Questions? Go ahead, ask them:</p>
+                <form>
+                    <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Name"
+                            required name="Name"></p>
+                    <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Email"
+                            required name="Email"></p>
+                    <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Message"
+                            required name="Message"></p>
+                    <button type="submit" class="w3-round-xlarge w3-button w3-green w3-third" onclick="feedback()">Send
+                        a Message</button>
+                </form>
+            </div>
+            <br>
+        </div>
+        <div id="aboutus" class="w3-half w3-grey ">
+            <div class="w3-card w3-margin">
+                <div class="w3-container w3-padding w3-light-grey">
+                    <h4>Our Rental Policies</h4>
+                </div>
+                <div class="w3-container w3-white">
+                    <div style="font-family:Book Antiqua" font-size="90">
+                        <blockquote>
+                            <p>Our deep and undying commitment to Rentals ensures you get the best selection, best
+                                equipment, and best service available for almost 50% of the product's cost. </p>
+
+
+                            <p>Any damage or loss is the responsibility of the renter, excluding mechanical failure from
+                                normal wear and tear. Yours Checklist is not responsible for any damage or loss
+                                resulting from product use, misuse or failure. The renter is responsible to obtain their
+                                own insurance, proof of which may be required at time of pick-up.</p>
+                            <p>*The amount of deposit depends upon the product being rented. </p>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer -->
+    <footer id="myFooter">
+        <div class="w3-cell-row w3-container w3-theme-l2 w3-padding-32">
+            <div class="w3-container w3-cell w3-mobile">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a [routerLink]="['/termsandconditions']">TERMS & CONDITIONS</a>
+            </div>
+            <div class="w3-container w3-cell w3-mobile">
+                <a [routerLink]="['/returns']">RETURNS & REFUNDS</a>
+            </div>
+            <div class="w3-container w3-cell w3-mobile">
+                <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
+            </div>
+        </div>
+    </footer>
+    
