--- a/src/app/termsandconditions/termsandconditions.component.html
+++ b/src/app/termsandconditions/termsandconditions.component.html
@@ -122,4 +122,4 @@
   <cite title="CookWare.com">Last Updated: August 2019</cite>
 </p>
 
-<a href="termsandconditions.html">Go to Top</a>
+<a [routerLink]="['/termsandconditions']">Go to Top</a>
