--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
         <!-- About Card -->
         <div class="w3-card w3-margin w3-margin-top">
             <a>
-                <img src='../images/Trolleys_Link.jpg' alt="Trolleya"></a>
+                <img src='../../assets/images/Trolleys_Link.jpg' style="width: 100%" height="200" alt="Trolleya"></a>
             <div class="w3-container w3-white">
                 <h4><b>Travel Trolleys</b></h4>
 
@@ -32,7 +32,7 @@
         <div class="w3-card w3-margin w3-margin-top">
             <a href="travel bag.html">
 
-                <img src="../images/Bags_Link.jpg" width="190" height="185" alt="bags"></a>
+                <img src="../../assets/images/Bags_Link.jpg" style="width: 100%" height="200" alt="bags"></a>
             <div class="w3-container w3-white">
                 <h4><b>Travel bags</b></h4>
 
@@ -43,7 +43,7 @@
         <!-- About Card -->
         <div class="w3-card w3-margin w3-margin-top">
             <a href="travel accessories.html">
-                <img src="../images/Accessories_Link.jpg" style="width: 180" height="155" alt="accessories"></a>
+                <img src="../../assets/images/Accessories_Link.jpg" style="width: 100%" height="200" alt="accessories"></a>
             <div class="w3-container w3-white">
                 <h4><b>Travel Accessories</b></h4>
 
@@ -54,7 +54,7 @@
         <!-- About Card -->
         <div class="w3-card w3-margin w3-margin-top">
             <a href="cosmetics.html">
-                <img src="../images/Cosmetics_Link.jpg" style="width: 100%" height="155" alt="cosmetics"></a>
+                <img src="../../assets/images/Cosmetics_Link.jpg" style="width: 100%" height="200" alt="cosmetics"></a>
             <div class="w3-container w3-white">
                 <h4><b>Travel Cosmetics</b></h4>
 
