Added auth guard functionality and nav bar logout button

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .bgimg {
-    background-position: center;
+    /* background-position: center; */
     background-size:cover;
     background-image: url('../../assets/images/Home_Background.jpg');
     }
