--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,12 +13,14 @@
         <a href="#" class="w3-bar-item w3-button">Feedback</a>
       </div>
     </div>
-    <div class="w3-right w3-padding">
-        <!-- <p>Want to become our PRIME MEMBER? Register with us</p> -->
+    <div *ngIf='!customerSvc.userLogin' class="w3-right w3-padding">
       <button class="w3-button w3-blue" [routerLink]="['/signup']">Sign Up</button>
       &nbsp;&nbsp;&nbsp;&nbsp;
       <button class="w3-button w3-green" [routerLink]="['/login']">Login</button>
-     
     </div>
+
+    <div *ngIf='customerSvc.userLogin' class="w3-right w3-padding">
+        <button class="w3-button w3-red" (click)='toggleLoginState()' [routerLink]="['/home']">Logout</button>
+      </div>
   </div>
 </div>
