commiting aftre login info

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .bgimg {
-    background-position: center;
-    background-size:cover;
+    /* background-position: center;*/
+    background-size:cover; 
     background-image: url('../../assets/images/Home_Background.jpg');
     }
 
