--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,18 +3,11 @@
         <span class="w3-text-black ">Your Checklist</span>
     </div>
     <hr class="cookware-header-line">
-    <div class="w3-center w3-text-balck">
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
-        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+    <div class="w3-center w3-text-balck " style="width: 100%;height:600px">
         <h4><b>It is Your Choice to Travel Smart...</b></h4>
     </div>
 </div>
+
 <div id="products" class="content w3-padding-large">
     <div class="w3-col l2">
         <!-- About Card -->
@@ -43,7 +36,8 @@
         <!-- About Card -->
         <div class="w3-card w3-margin w3-margin-top">
             <a href="travel accessories.html">
-                <img src="../../assets/images/Accessories_Link.jpg" style="width: 100%" height="200" alt="accessories"></a>
+                <img src="../../assets/images/Accessories_Link.jpg" style="width: 100%" height="200"
+                    alt="accessories"></a>
             <div class="w3-container w3-white">
                 <h4><b>Travel Accessories</b></h4>
 
@@ -61,133 +55,156 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <!-- Adding popup -->
-        <h2>Cash On Delivery!!!</h2>
-        <p>Wanna pay only after seeing the product? Check out our exclusive payment option</p>
+</div>
+<div class="container">
+    <!-- Adding popup -->
+    <h2>Cash On Delivery!!!</h2>
+    <p>Wanna pay only after seeing the product? Check out our exclusive payment option</p>
 
-        <!-- Button to Open the Modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal1">
-            What is COD??
-        </button>
-        <br />
-        <br />
+    <!-- Button to Open the Modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal1">
+        What is COD??
+    </button>
+    <br />
+    <br />
 
-        <h2>Easy Refunds!!!</h2>
+    <h2>Easy Refunds!!!</h2>
 
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-            Wanna get money back???
-        </button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        Wanna get money back???
+    </button>
 
-        <!-- The Modal -->
-        <div class="modal fade" id="myModal1">
-            <div class="modal-dialog">
-                <div class="modal-content">
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal1">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title">Cash on Delivery </h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        Cash on Delivery is a payment method where you dont need to pay anything before you actually see
-                        the products!!!
-                        You can pay the amount after wee deliver the product to you!!!
-                    </div>
-
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                    </div>
-
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Cash on Delivery </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    Cash on Delivery is a payment method where you dont need to pay anything before you actually see
+                    the products!!!
+                    You can pay the amount after wee deliver the product to you!!!
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
             </div>
         </div>
-        <!-- The Modal -->
-        <div class="modal fade" id="myModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
+    </div>
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title">Easy Refunds</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Easy Refunds</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
 
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        You dont have to worry about returning at all!!
-                        you can have your money back rather than getting points for each retrun you make!!!
+                <!-- Modal body -->
+                <div class="modal-body">
+                    You dont have to worry about returning at all!!
+                    you can have your money back rather than getting points for each retrun you make!!!
 
-                    </div>
+                </div>
 
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                    </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
 
+            </div>
+        </div>
+    </div>
+</div>
+<div class="w3-container">
+    <div class="w3-half w3-black w3-text-white">
+        <!-- Contact -->
+        <div class="w3-container" id="contact">
+            <h2>Your Feedback is important to us</h2>
+            <p>Questions? Go ahead, ask them:</p>
+            <form>
+                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Name"
+                        required name="Name"></p>
+                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Email"
+                        required name="Email"></p>
+                <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Message"
+                        required name="Message"></p>
+                <button type="submit" class="w3-round-xlarge w3-button w3-green w3-third" onclick="feedback()">Send
+                    a Message</button>
+            </form>
+        </div>
+        <br>
+    </div>
+    <div id="aboutus" class="w3-half w3-grey ">
+        <div class="w3-card w3-margin">
+            <div class="w3-container w3-padding w3-light-grey">
+                <h4>Our Rental Policies</h4>
+            </div>
+            <div class="w3-container w3-white">
+                <div style="font-family:Book Antiqua" font-size="90">
+                    <blockquote>
+                        <p>Our deep and undying commitment to Rentals ensures you get the best selection, best
+                            equipment, and best service available for almost 50% of the product's cost. </p>
+
+
+                        <p>Any damage or loss is the responsibility of the renter, excluding mechanical failure from
+                            normal wear and tear. Yours Checklist is not responsible for any damage or loss
+                            resulting from product use, misuse or failure. The renter is responsible to obtain their
+                            own insurance, proof of which may be required at time of pick-up.</p>
+                        <p>*The amount of deposit depends upon the product being rented. </p>
+                    </blockquote>
                 </div>
             </div>
         </div>
     </div>
-    <div class="w3-container">
-        <div class="w3-half w3-black w3-text-white">
-            <!-- Contact -->
-            <div class="w3-container" id="contact">
-                <h2>Your Feedback is important to us</h2>
-                <p>Questions? Go ahead, ask them:</p>
-                <form>
-                    <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Name"
-                            required name="Name"></p>
-                    <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Email"
-                            required name="Email"></p>
-                    <p><input class="w3-round-xlarge w3-input w3-border custom-input" type="text" placeholder="Message"
-                            required name="Message"></p>
-                    <button type="submit" class="w3-round-xlarge w3-button w3-green w3-third" onclick="feedback()">Send
-                        a Message</button>
-                </form>
-            </div>
-            <br>
+</div>
+<!-- Footer -->
+<footer id="myFooter">
+    <div class="w3-cell-row w3-container w3-theme-l2 w3-padding-32">
+        <div class="w3-container w3-cell w3-mobile">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a [routerLink]="['/termsandconditions']">TERMS & CONDITIONS</a>
         </div>
-        <div id="aboutus" class="w3-half w3-grey ">
-            <div class="w3-card w3-margin">
-                <div class="w3-container w3-padding w3-light-grey">
-                    <h4>Our Rental Policies</h4>
-                </div>
-                <div class="w3-container w3-white">
-                    <div style="font-family:Book Antiqua" font-size="90">
-                        <blockquote>
-                            <p>Our deep and undying commitment to Rentals ensures you get the best selection, best
-                                equipment, and best service available for almost 50% of the product's cost. </p>
-
-
-                            <p>Any damage or loss is the responsibility of the renter, excluding mechanical failure from
-                                normal wear and tear. Yours Checklist is not responsible for any damage or loss
-                                resulting from product use, misuse or failure. The renter is responsible to obtain their
-                                own insurance, proof of which may be required at time of pick-up.</p>
-                            <p>*The amount of deposit depends upon the product being rented. </p>
-                        </blockquote>
-                    </div>
-                </div>
-            </div>
+        <div class="w3-container w3-cell w3-mobile">
+            <a [routerLink]="['/returns']">RETURNS & REFUNDS</a>
+        </div>
+        <div class="w3-container w3-cell w3-mobile">
+            <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
         </div>
     </div>
-    <!-- Footer -->
-    <footer id="myFooter">
-        <div class="w3-cell-row w3-container w3-theme-l2 w3-padding-32">
-            <div class="w3-container w3-cell w3-mobile">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a [routerLink]="['/termsandconditions']">TERMS & CONDITIONS</a>
-            </div>
-            <div class="w3-container w3-cell w3-mobile">
-                <a [routerLink]="['/returns']">RETURNS & REFUNDS</a>
-            </div>
-            <div class="w3-container w3-cell w3-mobile">
-                <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
-            </div>
-        </div>
-    </footer>
-    
+</footer>
+<script>
+    // Used to toggle the menu on small screens when clicking on the menu button
+    function myFunction() {
+        var x = document.getElementById("navDemo");
+        if (x.className.indexOf("w3-show") == -1) {
+            x.className += " w3-show";
+        } else {
+            x.className = x.className.replace(" w3-show", "");
+        }
+    }
+
+    function feedback() {
+
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    var modal = document.getElementById('ticketModal');
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
