Products - Travel Accessories comnpleted

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -25,7 +25,7 @@
   <div class="w3-col l2">
     <!-- About Card -->
     <div class="w3-card w3-margin w3-margin-top">
-      <a href="travel accessories.html">
+      <a [routerLink]="['/accessories']">
         <img src="../../assets/images/Accessories_Link.jpg" style="width: 100%" height="200" alt="accessories"></a>
       <div class="w3-container w3-white">
         <h4><b>Travel Accessories</b></h4>
