--- a/src/app/products/accessories/accessory-one/accessory-one.component.html
+++ b/src/app/products/accessories/accessory-one/accessory-one.component.html
@@ -21,9 +21,9 @@
           </ng-template>
           <p-footer>
             <span>50.00 CAD</span>&nbsp;
-            <button class='w3-button w3-green'> Buy </button>
+            <button class='w3-button w3-green' [routerLink]="['/payment/ta1']"> Buy </button>
             <br><br><span>30.00 CAD</span>&nbsp;
-            <button class='w3-button w3-orange'> Rent </button>
+             <button class='w3-button w3-orange' [routerLink]="['/payment/ta1']"> Rent </button>
           </p-footer>
         </p-carousel>
       </div>
