--- a/src/app/products/trolleys/trolley-two/trolley-two.component.html
+++ b/src/app/products/trolleys/trolley-two/trolley-two.component.html
@@ -22,9 +22,9 @@
         </ng-template>
         <p-footer>
           <span>45.00 CAD</span>&nbsp;
-          <button class='w3-button w3-green'> Buy </button>
+          <button class='w3-button w3-green' [routerLink]="['/payment/tt2']"> Buy </button>
           <br><br><span>20.00 CAD</span>&nbsp;
-          <button class='w3-button w3-orange'> Rent </button>
+           <button class='w3-button w3-orange' [routerLink]="['/payment/tt2']"> Rent </button>
         </p-footer>
       </p-carousel>
     </div>
