--- a/src/app/products/accessories/accessory-two/accessory-two.component.html
+++ b/src/app/products/accessories/accessory-two/accessory-two.component.html
@@ -22,9 +22,9 @@
         </ng-template>
         <p-footer>
           <span>50.00 CAD</span>&nbsp;
-          <button class='w3-button w3-green'> Buy </button>
+          <button class='w3-button w3-green' [routerLink]="['/payment/ta2']"> Buy </button>
           <br><br><span>30.00 CAD</span>&nbsp;
-          <button class='w3-button w3-orange'> Rent </button>
+          <button class='w3-button w3-orange' [routerLink]="['/payment/ta2']"> Rent </button>
         </p-footer>
       </p-carousel>
     </div>
