--- a/src/app/products/cosmetics/cosmetic-two/cosmetic-two.component.html
+++ b/src/app/products/cosmetics/cosmetic-two/cosmetic-two.component.html
@@ -9,7 +9,7 @@
       <p-carousel [value]="cosmetics" [numVisible]="1" [numScroll]="1" [circular]="true"
         [responsiveOptions]="responsiveOptions" [style]="{'width':'600px', 'margin-top':'2em'}">
         <p-header>
-          <h3>BLACK BAG</h3>
+          <h3>ENTIRE BRUSH KIT</h3>
         </p-header>
         <ng-template let-cosmetics pTemplate="item">
           <div class="car-details">
@@ -22,9 +22,9 @@
         </ng-template>
         <p-footer>
           <span>50.00 CAD</span>&nbsp;
-          <button class='w3-button w3-green'> Buy </button>
+          <button class='w3-button w3-green' [routerLink]="['/payment/tc2']"> Buy </button>
           <br><br><span>30.00 CAD</span>&nbsp;
-          <button class='w3-button w3-orange'> Rent </button>
+           <button class='w3-button w3-orange' [routerLink]="['/payment/tc2']"> Rent </button>
         </p-footer>
       </p-carousel>
     </div>
