--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
     <!-- The Modal -->
 
 </div>
-<div class="w3-container">
+<div class="w3-container"> 
     <div class="w3-half w3-black w3-text-white">
         <!-- Contact -->
         <div class="w3-container" id="contact">
@@ -149,5 +149,17 @@
         if (event.target == modal) {
             modal.style.display = "none";
         }
+    }
+    function myFunction() {
+        var x = document.getElementById("navDemo");
+        if (x.className.indexOf("w3-show") == -1) {
+            x.className += " w3-show";
+        } else {
+            x.className = x.className.replace(" w3-show", "");
+        }
+    }
+
+    function feedback() {
+
     }
 </script>
