--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,13 @@
+<header class="bgimg w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-top w3-center">
+    <h2 class="w3-text-black ">Your Checklist</h2>
+  </div>
+  <hr class="cookware-header-line">
+  <div class="w3-center w3-text-balck" style="width:100%;height:600px;">
+      <h4><b>It is Your Choice to Travel Smart...</b></h4>
+
+  </div>
+</header>
 <div class="w3-center">
   <h2>Login Form</h2>
 </div>
