--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -10,22 +10,22 @@
           <div class="col-50">
             <h3>Billing Address</h3>
             <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Anitha">
+            <input type="text" id="fname" name="firstname" placeholder="Enter your name">
             <label for="email"><i class="fa fa-envelope"></i> Email</label>
-            <input type="text" id="email" name="email" placeholder="anitha@gmail.com">
+            <input type="text" id="email" name="email" placeholder="Enter your mail ID">
             <label for="adr"><i class="fa fa-address-card-o"></i> Address </label>
-            <input type="text" id="adr" name="address" placeholder="757vTarbutt Street Street">
+            <input type="text" id="adr" name="address" placeholder="Enter your address">
             <label for="city"><i class="fa fa-institution"></i> City</label>
-            <input type="text" id="city" name="city" placeholder="Canada">
+            <input type="text" id="city" name="city" placeholder="Enter your city">
 
             <div class="row">
               <div class="col-50">
                 <label for="state">State</label>
-                <input type="text" id="state" name="state" placeholder="NY">
+                <input type="text" id="state" name="state" placeholder="Enter your state">
               </div>
               <div class="col-50">
-                <label for="zip">Zip</label>
-                <input type="text" id="zip" name="zip" placeholder="10001">
+                <label for="zip">Postal Code</label>
+                <input type="text" id="zip" name="zip" placeholder="Postal Code">
               </div>
             </div>
           </div>
@@ -40,19 +40,19 @@
               <i class="fa fa-cc-discover" style="color:orange;"></i>
             </div>
             <label for="cname">Name on Card</label>
-            <input type="text" id="cname" name="cardname" placeholder="Anitha">
+            <input type="text" id="cname" name="cardname" placeholder="Enter the name on the card">
             <label for="ccnum">Credit card number</label>
-            <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+            <input type="text" id="ccnum" name="cardnumber" placeholder="xxxx-xxxx-xxxx-xxxx">
             <label for="expmonth">Exp Month</label>
-            <input type="text" id="expmonth" name="expmonth" placeholder="September">
+            <input type="text" id="expmonth" name="expmonth" placeholder="xx">
             <div class="row">
               <div class="col-50">
                 <label for="expyear">Exp Year</label>
-                <input type="text" id="expyear" name="expyear" placeholder="2018">
+                <input type="text" id="expyear" name="expyear" placeholder="xxxx">
               </div>
               <div class="col-50">
                 <label for="cvv">CVV</label>
-                <input type="text" id="cvv" name="cvv" placeholder="352">
+                <input type="text" id="cvv" name="cvv" placeholder="xxx">
               </div>
             </div>
           </div>
