--- a/src/app/products/accessories/accessory-one/accessory-one.component.html
+++ b/src/app/products/accessories/accessory-one/accessory-one.component.html
@@ -32,3 +32,19 @@
       </div>
     </div>
   </div>
+  <!-- Footer -->
+<footer id="myFooter">
+  <div class="w3-cell-row w3-container w3-theme-l2 w3-padding-32">
+      <div class="w3-container w3-cell w3-mobile">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a [routerLink]="['/termsandconditions']">TERMS & CONDITIONS</a>
+      </div>
+      <div class="w3-container w3-cell w3-mobile">
+          <a [routerLink]="['/returns']">RETURNS & REFUNDS</a>
+      </div>
+      <div class="w3-container w3-cell w3-mobile">
+          <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
+      </div>
+  </div>
+</footer>
