--- a/src/app/products/trolleys/trolleys.component.css
+++ b/src/app/products/trolleys/trolleys.component.css
@@ -1,3 +1,9 @@
+.bgimg {
+    /* background-position: center; */
+    background-size:cover;
+    background-image: url('../../../assets/images/Home_Background.jpg');
+    }
+    
 .carousel-demo .ui-carousel .ui-carousel-content .ui-carousel-item .car-details > .p-grid {
     border: 1px solid #b3c2ca;
     border-radius: 3px;
