--- a/src/app/products/trolleys/trolleys.component.html
+++ b/src/app/products/trolleys/trolleys.component.html
@@ -3,6 +3,11 @@
     <div class="w3-display-top w3-center">
       <h2 class="w3-text-black ">Your Checklist</h2>
     </div>
+    <hr class="cookware-header-line">
+    <div class="w3-center w3-text-balck" style="width:100%;height:600px;">
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+
+    </div>
   </header>
 
   <div class='w3-center w3-padding-16'>
@@ -40,3 +45,19 @@
     </table>
   </div>
 </div>
+<!-- Footer -->
+<footer id="myFooter">
+  <div class="w3-cell-row w3-container w3-theme-l2 w3-padding-32">
+      <div class="w3-container w3-cell w3-mobile">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a [routerLink]="['/termsandconditions']">TERMS & CONDITIONS</a>
+      </div>
+      <div class="w3-container w3-cell w3-mobile">
+          <a [routerLink]="['/returns']">RETURNS & REFUNDS</a>
+      </div>
+      <div class="w3-container w3-cell w3-mobile">
+          <a [routerLink]="['/privatepolicy']">PRIVATE POLICY</a>
+      </div>
+  </div>
+</footer>
