--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,8 @@
+.bgimg {
+  /* background-position: center; */
+  background-size:cover;
+  background-image: url('../../assets/images/Home_Background.jpg');
+  }
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
