--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,13 @@
 <div>
+  <header class="bgimg w3-display-container w3-grayscale-min" id="home">
+    <div class="w3-display-top w3-center">
+      <h2 class="w3-text-black ">Your Checklist</h2>
+    </div>
+    <div class="w3-center w3-text-balck" style="width:100%;height:600px;">
+        <h4><b>It is Your Choice to Travel Smart...</b></h4>
+
+    </div>
+  </header>
   <!-- <form action="addresspage.html" style="border:1px solid #ccc"> -->
   <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)" style="border:1px solid #ccc">
 
