--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,45 +1,70 @@
 <p class=heading>
   ABOUT US
-  </p>
-  <hr />
-  <p class=bodyheading>
+</p>
+<hr />
+<p class=bodyheading>
+  Who are we?
+</p>
+<hr />
+<p class=body>
+  We are a team of 3 people who decided to develop a site where you can get all essential items that are
+  needed for travel. We are students at confederation college enrolled in Information for Communication
+  technology for small business. We are one among millions of people who likes to travel and explore
+  places.
+</p>
+<hr />
+<p class=bodyheading>
   Our Motivation
-  </p>
-  <hr/>
-  <p class=body>
-  Your Checklist is a travel items purchase website that will help people to get all the essential items that will be required to make their travel a comfortable one.
-  </p>
-  <div class="w3-center">
+</p>
+
+<p class=body>
+  Our goal is to be able to bring together all essential items that would be needed for travel, which would
+  make their travel a comfortable one. Our goal is to make our customers happy which in turn would
+  make us happy.</p>
+<h5><i>Our goal is to increase the customer satisfaction through our service.</i></h5>
+
+<hr />
+<div class="w3-center">
   <table class=" w3-border-0" cellpadding="30">
-  <!--<thead><center><h2> Travel Bags</h2></center> </thead>!-->
-  <tr>
-  <td><img src="../../assets/images/Anitha.jpg"  width="250" height="250" alt="anitha">
-  <ul class=body>
-  <ul>Anitha Raja Arunachalam</ul>
-  <ul>22663100195047</ul>
-  
-  </ul>
-  </td>
-  <!--<b><p align="center"> 60.00 CAD </p></b>!-->
-  <!--<center><button type="button"><a href="travelbag1.html">Buy</a></button></center></td>!-->
-  <td><img src="../../assets/images/Kiruthika.png" width="250" height="250" alt="kiruthika">
-  <ul class=body>
-  <ul>Kiruthika Ramachandran</ul>
-  <ul>22663100194883</ul>
-  
-  </ul>
-  </td>
-  <!--<b><p align="center"> 58.00 CAD </p></b>!-->
-  <!--<center><button type="button"><a href="travelbag2.html">Buy</a></button></center></td>!-->
-  <td><img src="../../assets/images/Shaheen.JPG"  width="250" height="250" alt="shaheen">
-  <ul class=body>
-  <ul>Shaheen Shaik</ul>
-  <ul>22663100195129</ul>
-  </ul>
-  </td>
-  </tr>
-    
+    <!--<thead><center><h2> Travel Bags</h2></center> </thead>!-->
+    <tr>
+      <td><img src="../../assets/images/Anitha.jpg" width="250" height="250" alt="anitha">
+        <ul class=body>
+          <ul>Anitha Raja Arunachalam</ul>
+          <ul>22663100195047</ul>
+          <ul>aarunach@confederationcollege.ca</ul>
+          <ul>Github account: <a href="https://github.com/anitha0409">anitha0409</a> </ul>
+          
+
+        </ul>
+      </td>
+      <!--<b><p align="center"> 60.00 CAD </p></b>!-->
+      <!--<center><button type="button"><a href="travelbag1.html">Buy</a></button></center></td>!-->
+      <td><img src="../../assets/images/Kiruthika.png" width="250" height="250" alt="kiruthika">
+        <ul class=body>
+          <ul>Kiruthika Ramachandran</ul>
+          <ul>22663100194883</ul>
+          <ul>kramacha@confederationcollege.ca</ul>
+          <ul>Github account: <a href="https://github.com/kiruthika1612">kiruthika1612 </a></ul>
+          
+        </ul>
+      </td>
+      <!--<b><p align="center"> 58.00 CAD </p></b>!-->
+      <!--<center><button type="button"><a href="travelbag2.html">Buy</a></button></center></td>!-->
+      <td><img src="../../assets/images/Shaheen.JPG" width="250" height="250" alt="shaheen">
+        <ul class=body>
+          <ul>Shaheen Shaik</ul>
+          <ul>22663100195129</ul>
+          <ul>sshaik@confederationcollege.ca</ul>
+          <ul>Github account: <a href="https://github.com/parrotsk">parrotsk </a></ul>
+          
+        </ul>
+      </td>
+    </tr>
+
   </table>
-  </div>
-  <p><b>
-   <a class="w3-center" href="https://github.com/kiruthika1612/YoursChoice.git">Visit our Project in Github</a><p></b>
+</div>
+<p class="w3-center"><b>
+    <h4> Repository :
+      <a href="https://github.com/kiruthika1612/YoursChoice.git">Visit our Project in Github</a></h4>
+  </b></p>
