--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
 <div class="w3-container"> 
     <div class="w3-half w3-black w3-text-white">
         <!-- Contact -->
-        <div class="w3-container" id="contact">
+        <div class="w3-container" id="feedback">
             <h2>Your Feedback is important to us</h2>
             <p>Questions? Go ahead, ask them:</p>
             <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
