--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -33,7 +33,7 @@
           <ul>Anitha Raja Arunachalam</ul>
           <ul>22663100195047</ul>
           <ul>aarunach@confederationcollege.ca</ul>
-          <ul>Github account: <a href="https://github.com/anitha0409">anitha0409</a> </ul>
+          <ul>Github account: <a href="https://github.com/Anitha0409">Anitha0409</a> </ul>
           
 
         </ul>
