commitng new repo in aboutus page

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -66,7 +66,7 @@
 </div>
 <p class="w3-center"><b>
     <h4> Repository :
-      <a href="https://github.com/kiruthika1612/YoursChoice.git">Visit our Project in Github</a></h4>
+      <a href="https://github.com/kiruthika1612/YoursChecklist-2">Visit our Project in Github</a></h4>
   </b></p>
   <!-- Footer -->
 <footer id="myFooter">
