--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -58,6 +58,7 @@
     </div>
   </div>
 </div>
+<livechat-widget licenseId="11877480"></livechat-widget>
 <!-- <script>
 // Used to toggle the menu on small screens when clicking on the menu button
 function myFunction() {
