--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 
     <!-- Button to Open the Modal -->
     <button class="w3-button w3-blue w3-margin-bottom"
-        onclick="document.getElementById('ticketModal').style.display='block'">What is COD??</button>
+        onclick="document.getElementById('ticketModal1').style.display='block'">What is COD??</button>
     <br />
     <br />
 
@@ -93,10 +93,10 @@
 </footer>
 
 <!-- Ticket Modal -->
-<div id="ticketModal" class="w3-modal">
+<div id="ticketModal1" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
         <header class="w3-container w3-teal w3-center w3-padding">
-            <span onclick="document.getElementById('ticketModal').style.display='none'"
+            <span onclick="document.getElementById('ticketModal1').style.display='none'"
                 class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
             <h2 class="w3-wide"><i class="fa fa-money w3-margin-right"></i>Cash On Delivery</h2>
         </header>
@@ -108,7 +108,7 @@
                 </h3>
             </div>
             <button class="w3-button w3-red w3-section"
-                onclick="document.getElementById('ticketModal').style.display='none'">Cancel <i
+                onclick="document.getElementById('ticketModal1').style.display='none'">Cancel <i
                     class="fa fa-remove"></i></button>
         </div>
     </div>
@@ -138,6 +138,12 @@
 <script>
     // When the user clicks anywhere outside of the modal, close it
     var modal = document.getElementById('ticketModal');
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+    var modal = document.getElementById('ticketModal1');
     window.onclick = function (event) {
         if (event.target == modal) {
             modal.style.display = "none";
