--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<!-- creating navigation bar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)"
@@ -30,8 +31,7 @@
     </div>
   </div>
   <!-- Button to Open the Modal -->
-  <!-- <button class="w3-button w3-blue w3-margin-bottom"
-    onclick="document.getElementById('ticketModal').style.display='block'">What is COD??</button> -->
+
   <div id="ticketModal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
       <header class="w3-container w3-teal w3-center w3-padding">
@@ -58,19 +58,5 @@
     </div>
   </div>
 </div>
+<!-- importing livecart widjet -->
 <livechat-widget licenseId="11877480"></livechat-widget>
-<!-- <script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-
-function feedback() {
-
-}
-</script> -->
