--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -8,7 +8,7 @@
 
     </div>
   </header>
-  <!-- <form action="addresspage.html" style="border:1px solid #ccc"> -->
+  <!-- validating data in sginup form -->
   <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)" style="border:1px solid #ccc">
 
     <div class="container">
