--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -32,8 +32,8 @@
         <ul class=body>
           <ul>Anitha Raja Arunachalam</ul>
           <ul>22663100195047</ul>
-          <ul>aarunach@confederationcollege.ca</ul>
-          <ul>Github account: <a href="https://github.com/Anitha0409">Anitha0409</a> </ul>
+          <ul><a href="mailto:aarunach@confederationcollege.ca"><i class="fa fa-envelope" style="font-size:36px;color:black"></i> Send mail</a></ul>
+          <ul><a href="https://github.com/Anitha0409"><i class="fa fa-github" style="font-size:36px;color:black"></i> </a> </ul>
 
 
         </ul>
@@ -44,8 +44,8 @@
         <ul class=body>
           <ul>Kiruthika Ramachandran</ul>
           <ul>22663100194883</ul>
-          <ul>kramacha@confederationcollege.ca</ul>
-          <ul>Github account: <a href="https://github.com/kiruthika1612">kiruthika1612 </a></ul>
+          <ul><a href="mailto:kramacha@confederationcollege.ca"><i class="fa fa-envelope" style="font-size:36px;color:black"></i> Send mail</a></ul>
+          <ul><a href="https://github.com/kiruthika1612"><i class="fa fa-github" style="font-size:36px;color:black"></i> </a></ul>
 
         </ul>
       </td>
@@ -55,8 +55,8 @@
         <ul class=body>
           <ul>Shaheen Shaik</ul>
           <ul>22663100195129</ul>
-          <ul>sshaik@confederationcollege.ca</ul>
-          <ul>Github account: <a href="https://github.com/parrotsk">parrotsk </a></ul>
+          <ul><a href="mailto:sshaik@confederationcollege.ca"><i class="fa fa-envelope" style="font-size:36px;color:black"></i> Send mail</a></ul>
+          <ul><a href="https://github.com/parrotsk"><i class="fa fa-github" style="font-size:36px;color:black"></i> </a></ul>
 
         </ul>
       </td>
